Fixed nav button alignment and animation

--- a/src/components/Navigation/NavButton/NavButton.css
+++ b/src/components/Navigation/NavButton/NavButton.css
@@ -7,7 +7,7 @@
     top: 0;
     transition: all 4.4s cubic-bezier(.7,0,.3,1);
     width: 100%;
-    padding: 0.5rem 1rem;
+    padding: 1rem 1rem;
 }
 
 @media (min-width:769px) {
