--- a/src/components/Navigation/NavButton/TopDrawer/DrawerButton/DrawerButton.css
+++ b/src/components/Navigation/NavButton/TopDrawer/DrawerButton/DrawerButton.css
@@ -30,27 +30,27 @@
 }
 
 .toggle-button-line::before {
-    top: 8px;
+    top: 16px;
 }
 
 .toggle-button-line::after {
-    bottom: 8px;
+    bottom: 16px;
 }
 
 .toggle-button-line-open::before,
 .toggle-button-line-open::after {
-    transition: all 0.4s ease;
     display: flex;
     position: absolute;
     content: '';
     width: 30px;
     height: 3px;background: #525252;
+    transition: all 0.4s ease;
 }
 
 .toggle-button-line-open::before {
-    transform: rotate(45deg);
+    transform: rotate(225deg);
 }
 
 .toggle-button-line-open::after {
-    transform: rotate(135deg);
+    transform: rotate(315deg);
 }
